third_party/rust/indoc/v1/crate/tests/ui/printdoc-no-display.rs
use indoc::printdoc;

struct NoDisplay;

fn main() {
    printdoc!("{}", NoDisplay);
}
